more fix for not showing glove screenshot with css file

--- a/projectstyle.css
+++ b/projectstyle.css
@@ -80,7 +80,7 @@
         
         .gallery-item img {
             width: 100%;
-            height: 150px;
+            height: 100%;
             object-fit: cover;
             display: block;
         }
